--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+#container {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
 ul {
     list-style: none;
 }
