--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
     grid-template-columns: auto auto;
 }
 
+#display-result {
+    display: flex;
+    flex-direction: column;
+}
+
 ul {
     list-style: none;
 }
