--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --cor-01: #274775;
+    --cor-02: #fff;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +12,11 @@
 #container {
     display: grid;
     grid-template-columns: auto auto;
+}
+
+#container-user {
+    background-color: var(--cor-01);
+    color: var(--cor-02);
 }
 
 #display-result {
