--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,18 @@
     padding: 10px 0 0 10px;
 }
 
+#container-user ul li {
+    margin-top: 10px;
+}
+
+#container-user ul li:hover {
+    cursor: pointer;
+}
+
+#container-user ul li:first-child {
+    margin-top: 0;
+}
+
 #display-result {
     display: flex;
     flex-direction: column;
